// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModelInfosDocToCsvTransform should correctly transform ModelInfo data to CSV when UUIDHistory has multiple items 1`] = `
[
  {
    "CREATEDAT": "1970-01-01T00:00:00.000Z",
    "DESCRIPTION": "description_2_^°!"§$%&/(",
    "LOCALE": "shortCode_2",
    "NAME": "name_2_^°!"§$%&/(",
    "RELEASED": "true",
    "RELEASENOTES": "releaseNotes_2_^°!"§$%&/(",
    "UPDATEDAT": "1970-01-01T00:00:00.001Z",
    "UUIDHISTORY": "uuid_1
uuid_2",
    "VERSION": "version_2",
  },
]
`;

exports[`ModelInfosDocToCsvTransform should correctly transform ModelInfo data to CSV when UUIDHistory has multiple items 2`] = `
""UUIDHISTORY","NAME","LOCALE","DESCRIPTION","VERSION","RELEASED","RELEASENOTES","CREATEDAT","UPDATEDAT"
"uuid_1
uuid_2","name_2_^°!""§$%&/(","shortCode_2","description_2_^°!""§$%&/(","version_2","true","releaseNotes_2_^°!""§$%&/(","1970-01-01T00:00:00.000Z","1970-01-01T00:00:00.001Z"
"
`;

exports[`ModelInfosDocToCsvTransform should correctly transform ModelInfo data to CSV when UUIDHistory has one item 1`] = `
[
  {
    "CREATEDAT": "1970-01-01T00:00:00.000Z",
    "DESCRIPTION": "description_2_^°!"§$%&/(",
    "LOCALE": "shortCode_2",
    "NAME": "name_2_^°!"§$%&/(",
    "RELEASED": "true",
    "RELEASENOTES": "releaseNotes_2_^°!"§$%&/(",
    "UPDATEDAT": "1970-01-01T00:00:00.001Z",
    "UUIDHISTORY": "uuid_1",
    "VERSION": "version_2",
  },
]
`;

exports[`ModelInfosDocToCsvTransform should correctly transform ModelInfo data to CSV when UUIDHistory has one item 2`] = `
""UUIDHISTORY","NAME","LOCALE","DESCRIPTION","VERSION","RELEASED","RELEASENOTES","CREATEDAT","UPDATEDAT"
"uuid_1","name_2_^°!""§$%&/(","shortCode_2","description_2_^°!""§$%&/(","version_2","true","releaseNotes_2_^°!""§$%&/(","1970-01-01T00:00:00.000Z","1970-01-01T00:00:00.001Z"
"
`;

exports[`ModelInfosDocToCsvTransform should correctly transform ModelInfo data to CSV when UUIDHistory is empty 1`] = `
[
  {
    "CREATEDAT": "1970-01-01T00:00:00.000Z",
    "DESCRIPTION": "description_2_^°!"§$%&/(",
    "LOCALE": "shortCode_2",
    "NAME": "name_2_^°!"§$%&/(",
    "RELEASED": "true",
    "RELEASENOTES": "releaseNotes_2_^°!"§$%&/(",
    "UPDATEDAT": "1970-01-01T00:00:00.001Z",
    "UUIDHISTORY": "",
    "VERSION": "version_2",
  },
]
`;

exports[`ModelInfosDocToCsvTransform should correctly transform ModelInfo data to CSV when UUIDHistory is empty 2`] = `
""UUIDHISTORY","NAME","LOCALE","DESCRIPTION","VERSION","RELEASED","RELEASENOTES","CREATEDAT","UPDATEDAT"
"","name_2_^°!""§$%&/(","shortCode_2","description_2_^°!""§$%&/(","version_2","true","releaseNotes_2_^°!""§$%&/(","1970-01-01T00:00:00.000Z","1970-01-01T00:00:00.001Z"
"
`;

exports[`ModelInfosDocToCsvTransform should correctly transform ModelInfo data to CSV when model is released 1`] = `
[
  {
    "CREATEDAT": "1970-01-01T00:00:00.000Z",
    "DESCRIPTION": "description_2_^°!"§$%&/(",
    "LOCALE": "shortCode_2",
    "NAME": "name_2_^°!"§$%&/(",
    "RELEASED": "true",
    "RELEASENOTES": "releaseNotes_2_^°!"§$%&/(",
    "UPDATEDAT": "1970-01-01T00:00:00.001Z",
    "UUIDHISTORY": "uuid_1
uuid_2",
    "VERSION": "version_2",
  },
]
`;

exports[`ModelInfosDocToCsvTransform should correctly transform ModelInfo data to CSV when model is released 2`] = `
""UUIDHISTORY","NAME","LOCALE","DESCRIPTION","VERSION","RELEASED","RELEASENOTES","CREATEDAT","UPDATEDAT"
"uuid_1
uuid_2","name_2_^°!""§$%&/(","shortCode_2","description_2_^°!""§$%&/(","version_2","true","releaseNotes_2_^°!""§$%&/(","1970-01-01T00:00:00.000Z","1970-01-01T00:00:00.001Z"
"
`;

exports[`ModelInfosDocToCsvTransform should correctly transform ModelInfo data to CSV when model is unreleased 1`] = `
[
  {
    "CREATEDAT": "1970-01-01T00:00:00.000Z",
    "DESCRIPTION": "description_2_^°!"§$%&/(",
    "LOCALE": "shortCode_2",
    "NAME": "name_2_^°!"§$%&/(",
    "RELEASED": "false",
    "RELEASENOTES": "releaseNotes_2_^°!"§$%&/(",
    "UPDATEDAT": "1970-01-01T00:00:00.001Z",
    "UUIDHISTORY": "uuid_1
uuid_2",
    "VERSION": "version_2",
  },
]
`;

exports[`ModelInfosDocToCsvTransform should correctly transform ModelInfo data to CSV when model is unreleased 2`] = `
""UUIDHISTORY","NAME","LOCALE","DESCRIPTION","VERSION","RELEASED","RELEASENOTES","CREATEDAT","UPDATEDAT"
"uuid_1
uuid_2","name_2_^°!""§$%&/(","shortCode_2","description_2_^°!""§$%&/(","version_2","false","releaseNotes_2_^°!""§$%&/(","1970-01-01T00:00:00.000Z","1970-01-01T00:00:00.001Z"
"
`;
